[package]
name = "eth_toolrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethers = { version = "2.0.7", features = ["openssl", "rustls", "ws"] }
eyre = "0.6.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
telegram-bot = "0.8.0"
rusqlite = "0.29.0"
prettytable-rs = "0.10.0"
dotenv = "0.15.0"

[dev-dependencies]
ethers = "2.0.4"
